# harmony-dev-helper

./: .gitignore  PROJECT_DETECTOR_RS_REFACTOR_TODO.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/hdc-bridge-rs/: Cargo.toml
apps/hdc-bridge-rs/src/: emulator.rs  hdc_bin.rs  lib.rs  main.rs  mcp.rs
apps/hdc-bridge-rs/tests/: manual_device.rs
apps/hdckit-rs/: .gitignore  Cargo.toml  README.md
apps/hdckit-rs/src/: client.rs  connection.rs  exec.rs  hilog.rs  lib.rs  target.rs  tracker.rs  types.rs
apps/hdckit-rs/tests/: manual_device.rs  mock_integration.rs
apps/image-manager-rs/: Cargo.toml  README.md
apps/image-manager-rs/src/: defaults.rs  downloader.rs  error.rs  ini.rs  lib.rs  manager.rs  types.rs
apps/image-manager-rs/tests/: integration.rs
apps/intellij-plugin/: build.gradle.kts  gradle.properties  settings.gradle.kts
apps/intellij-plugin/src/main/kotlin/dev/harmony/plugin/: HarmonyHostBridge.kt  HarmonyToolWindowFactory.kt  HarmonyWebSocketBridge.kt  HarmonyWebviewServer.kt
apps/project-detector-rs/: Cargo.toml  README.md
apps/project-detector-rs/src/: build_profile.rs  element_directory.rs  error.rs  fs_discovery.rs  lib.rs  media_directory.rs  module.rs  product.rs  profile_directory.rs  project.rs  project_detector.rs  rawfile_directory.rs  resfile_directory.rs  resource.rs  resource_directory.rs
apps/project-detector-rs/src/files/: element_json_file.rs  mod.rs
apps/project-detector-rs/src/references/: element_json_file_reference.rs  mod.rs
apps/project-detector-rs/src/utils/: byteorder.rs  mod.rs  path.rs  uri.rs
apps/project-detector-rs/src/utils/qualifier/: color_mode.rs  device_type.rs  language_code.rs  mcc.rs  mnc.rs  mod.rs  orientation.rs  region_code.rs  screen_density.rs  utils_impl.rs
apps/project-detector-rs/tests/: detector_flow.rs
apps/project-detector-rs/tests/fixtures/mock/harmony-project-1/entry/src/main/resources/base/element/: string.json
apps/project-detector-rs/tests/fixtures/mock/harmony-project-1/entry/src/main/resources/rawfile/: foo.txt
apps/project-detector-rs/tests/fixtures/mock/harmony-project-1/entry/src/ohosTest/resources/base/profile/: test_pages.json
apps/project-detector-rs/tests/fixtures/mock/harmony-project-2/: build-profile.json5
apps/project-detector-rs/tests/fixtures/mock/harmony-project-2/entry/: build-profile.json5
apps/sdk-manager-rs/: Cargo.toml  README.md
apps/sdk-manager-rs/src/: catalog.rs  downloader.rs  error.rs  extract.rs  lib.rs  manager.rs  progress.rs  types.rs
apps/sdk-manager-rs/tests/: integration.rs
apps/vscode-extension/: package.json  tsconfig.json
apps/vscode-extension/src/: extension.ts
apps/webview/: index.html  package.json  tsconfig.json  vite.config.ts
apps/webview/.storybook/: main.ts  preview.ts
apps/webview/src/: App.stories.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/webview/src/components/: ConnectionStatus.stories.tsx  ConnectionStatus.tsx  MainTabbedPanel.tsx
apps/webview/src/features/emulators/: EmulatorsPanel.stories.tsx  EmulatorsPanel.tsx
apps/webview/src/features/filesystem/: DeviceFileExplorerPanel.tsx  FileSystem.stories.tsx  FileSystem.tsx  hdcVirtualFileSystem.ts  types.ts
apps/webview/src/features/hdc/: DeviceSelector.stories.tsx  DeviceSelector.tsx  HdcSettingsDialog.tsx  types.ts  useHdcBinConfig.ts  useHdcDeviceSelection.ts
apps/webview/src/features/hilog/: HilogConsolePanel.tsx
apps/webview/src/features/mainPanel/: mainPanelTabs.ts
apps/webview/src/features/mcp/: McpToolsPanel.tsx
apps/webview/src/features/settings/: SettingsDialog.tsx  appSettings.ts
external-doc/: cursor-mcp.md  vscode-dark-colors.json  vscode-light-colors.json
scripts/: sync-vscode-bridge-bin.mjs  sync-webview-assets.mjs
