[package]
name = "hdc-bridge-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "hdc_bridge_rs"
path = "src/lib.rs"

[[bin]]
name = "hdc-bridge-rs"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.31"
hdckit_rs = { path = "../desktop/src-tauri/vendor/hdckit-rs", package = "hdckit-rs" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["net", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.26.2"
