[package]
name = "hdc-bridge-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "hdc_bridge_rs"
path = "src/lib.rs"

[[bin]]
name = "hdc-bridge-rs"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
futures-util = "0.3.31"
hdckit_rs = { path = "../hdckit-rs", package = "hdckit-rs" }
image-manager-rs = { path = "../image-manager-rs" }
rmcp = { version = "0.17.0", features = ["transport-streamable-http-server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["net", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.26.2"

[dev-dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
tower = "0.5.3"
