[package]
name = "hdckit-rs"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for OpenHarmony HDC"
license = "MIT"
repository = "https://github.com/liriliri/hdckit"

[lib]
name = "hdckit_rs"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
once_cell = "1.20"
regex = "1.11"
thiserror = "2.0"
tokio = { version = "1.43", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time", "fs"] }

[dev-dependencies]
tempfile = "3.17"
