[package]
name = "image-manager-rs"
version = "0.1.0"
edition = "2021"
description = "Internal Rust crate for Harmony emulator image management"
license = "MIT"

[lib]
name = "image_manager_rs"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
futures-util = "0.3.31"
hex = "0.4.3"
indexmap = { version = "2.7.1", features = ["serde"] }
once_cell = "1.20"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_json5 = "0.2.1"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.15.1", features = ["fast-rng", "v4"] }
walkdir = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
axum = "0.8.1"
tempfile = "3.17"
