[package]
name = "sdk-manager-rs"
version = "0.1.0"
edition = "2021"
description = "Internal Rust crate for OpenHarmony SDK download and extraction"
license = "MIT"

[lib]
name = "sdk_manager_rs"
path = "src/lib.rs"

[dependencies]
flate2 = "1.1.0"
futures-util = "0.3.31"
hex = "0.4.3"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10.8"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
walkdir = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
axum = "0.8.1"
tempfile = "3.17"
