[package]
name = "harmony_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
futures-util = "0.3.31"
hdckit_rs = { path = "vendor/hdckit-rs", package = "hdckit-rs" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["net", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.2.1"

[features]
default = []
