[package]
name = "harmony_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
hdc_bridge_rs = { path = "../../hdc-bridge-rs", package = "hdc-bridge-rs" }
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-log = "2.2.1"

[features]
default = []
